            |_|   \___|\__|_|  |_| |_| \_|\___|\__| /_/   \_\_|  |___|
              encapsulating Petri net-related functions in a C++ API
                        http://service-technology.org/pnapi


Version 4.01-unreleased
=======================

* removed memory leak (thanks to wendy)

* implemented Woflan parser

* caged lexer and parser in classes (i.e. cleaned up global namespace)

Version 4.00 (2010-03-14)
=========================

* HEAVY INTERFACE CHANGES

* make check now tests, whether customer tools still work with the API (see
  `https://gna.org/task/?6813')

* added Makefile.am.customer for customer tools (will be generated by
  compiling the API)

* added make target for zcov

* copied parameter `--stats' from Wendy to Petri

* integrated `Output.*' and `verbose.*' to Petri (see
  `https://gna.org/task/?6837')

* reimplemented open net normalization function `normalize()') according to
  [LohmannMW_2007_icatpn]

* implemented PNML import and export based on the code of
  `http://www.w3.org/XML/9707/XML-in-C'

* added a utility that adds a configuration interface to a labeled Petri net

* added a utility that forms the final conditions in CDNF (see
  `https://gna.org/task/index.php?6845')

* added a utility that unfolds HL-oWFN to LL-oWFN (see
  `https://gna.org/task/index.php?6876')

* extended oWFN by role information (see
  `https://gna.org/task/index.php?6887')

* adapted scripts etc. to finally use the PNAPI as shared library

* added pnapi::version() to get PNAPI package string in customer tools

* introduced Interface class to handle input, output and synchronous labels

* added handle for verbose output

* rearranged exceptions

* fixed bug #14274: PNAPI: Memory leaks

* fixed bug #14856: PNAPI: Reduction by Starke rule #9 crashes under
  certain conditions

* fixed bug #14887: PNAPI: make check fails under MinGW

* fixed bug #15179: PNAPI: avoid using mktemp in Output.cc

* fixed bug #15415: PNAPI: Assertion failure when reducing net
