@@ -16,4 +16,10 @@ Version 4.01-unreleased
 
 * caged lexer and parser in classes (i.e. cleaned up global namespace)
 
-\nSee file ChangeLog <http://service-technology.org/files/pnapi/ChangeLog> for\ncomplete version history.\n
+* added a parameter `--guessFormula' to the frontend tool to guess the
+  final condition from the structure of the net (i.e., use the sink place)
+
+
+See file ChangeLog <http://service-technology.org/files/pnapi/ChangeLog> for
+complete version history.
+
